--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </main>
         <footer>
             <div class="footer">
-              <h1 class="footer-greeting"> FlowerShop</h1>
+              <h1 class="footer-greeting"> <span class="footer-color">Flower</span>shop</h1>
           <h5 class="footer-title"> It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h5>
           <p class="footer-description">@2020-2023, FlowerShop.com. All rights reserved. </p>
 
